--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body{
     height: 100vh;
     background: linear-gradient(#26547c,#ef476f);
+    overflow: hidden;
+    position: relative;
 }
 
 #star-pattern {
@@ -8,7 +10,7 @@ body{
     background-size: 10%;  
     position: absolute;
     left: 50%;
-    top: 0px;
+    top: 5px;
     translate: -50% 0%;
     z-index: 1;
     height: 100%;
