--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,10 @@ body{
 }
 
 #star-pattern {
-    background-image: url("/assets/images/tiles.svg");
+    background-image: url("tiles.svg");
     background-size: 10%;  
     position: absolute;
-    left: 00%;
+    left: 50%;
     top: 50;
     translate: -50% 0%;
     z-index: 1;
