--- a/main.css
+++ b/main.css
@@ -1,18 +1,24 @@
-body{
-    height: 100vh;
-    background: linear-gradient(#ef476f,#26547c);
-    position: relative;
-    overflow: hidden;
+@font-face {
+    font-family: Fredoka;
+    src: url("assets/Fredoka/Fredoka.ttf");
 }
 
-#star-pattern {
-    background-image: url("tiles.svg");
+body{
+    height: 100vh;
+    background: linear-gradient(#db1147 70%,#fcfcfc);
+    position: relative;
+    overflow: hidden;
+    font-family: Fredoka,sans-serif;
+}
+
+#tile-pattern {
+    background-image: url("assets/images/tiles.svg");
     background-size: 10%;
     position: absolute;
     left: 50%;
     top: 50;
     translate: -50% 0%;
-    z-index: 1;
+    z-index: -2;
     height: 100%;
     width: 100%;
     min-width: 1200px;
@@ -30,7 +36,7 @@ body{
       }
 }
 
-#star-gradient-overlay {
+#gradient-overlay {
     background: radial-gradient(circle, transparent 50%, #ffffff);
     position: absolute;
     left: 0px;
@@ -38,5 +44,13 @@ body{
     width: 100%;
     height: 100%;
     opacity: 0.2;
-    z-index: 2;
+    z-index: -1;
+}
+
+#mainstuff{
+    background-color: aliceblue;
+    width: 50%;
+    margin: 25%;
+    z-index: 1;
+    height: 100%;
 }
