--- a/main.css
+++ b/main.css
@@ -4,11 +4,17 @@
 }
 
 body{
-    height: 100vh;
     background: linear-gradient(#db1147 70%,#fcfcfc);
     position: relative;
-    overflow: hidden;
+    overflow: auto;
     font-family: Fredoka,sans-serif;
+    font-size: large;
+}
+
+#tile-container{
+    height: 100%;
+    display: inline;
+    width: 100%;
 }
 
 #tile-pattern {
@@ -16,7 +22,6 @@ body{
     background-size: 10%;
     position: absolute;
     left: 50%;
-    top: 50;
     translate: -50% 0%;
     z-index: -2;
     height: 100%;
@@ -36,21 +41,14 @@ body{
       }
 }
 
-#gradient-overlay {
-    background: radial-gradient(circle, transparent 50%, #ffffff);
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    opacity: 0.2;
-    z-index: -1;
-}
-
 #mainstuff{
-    background-color: aliceblue;
+    background-color: rgb(243, 249, 255);
     width: 50%;
-    margin: 25%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: -5px;
     z-index: 1;
-    height: 100%;
+    outline-color: #ffffff;
+    outline-width: 10px;
+    outline-style: groove;
 }
