--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body{
 
 #mainstuff{
     background-color: rgb(243, 249, 255);
-    width: 50%;
+    width: 50vw;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: -6px;
@@ -74,11 +74,12 @@ a{
 
 mini{
     color: #7d7d7e;
-    font-size: 12px;
+    font-size: 0.7vw;
 }
 
 h1{
     color: #000000;
+    font-size: 2.5vw;
 }
 
 em{
