--- a/main.css
+++ b/main.css
@@ -21,7 +21,6 @@ body{
     z-index: -2;
     height: 100%;
     width: 100%;
-    min-width: 1200px;
     opacity: 10%;
     animation: pan 180s linear infinite;
     will-change: background-position;
@@ -53,6 +52,17 @@ body{
     overflow-y: auto;
 }
 
+@media screen and (max-width: 800px){
+    #mainstuff{
+        width: 80vw;
+        margin-left: 8.5vw;
+        margin-right: 10vw;
+        padding-left: 0px;
+        padding-right: 0px;
+        overflow-y: auto;
+    }
+}
+
 p {
     padding-bottom:10px;
 }
@@ -74,12 +84,11 @@ a{
 
 mini{
     color: #7d7d7e;
-    font-size: 0.7vw;
+    font-size: 12px;
 }
 
 h1{
     color: #000000;
-    font-size: 2.5vw;
 }
 
 em{
