Update CSS please

--- a/main.css
+++ b/main.css
@@ -208,6 +208,11 @@ a img.thumbanail:hover {
         font-size: 20px;
     }
 
+    body{
+        border: #00000066 0px;
+        border-style: dashed;
+    }
+
 
 }
 
