--- a/main.css
+++ b/main.css
@@ -14,6 +14,42 @@ body{
     width: 100%;
 }
 
+.navbar ul{
+    width: 100%;
+    list-style-type: none;
+    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    text-align: center;
+    background-color: #a895ff35;
+    border-radius: 10px;
+    box-shadow: #1e178b41 0px 3px;
+    scale: 1.05;
+}
+
+.navbar a{
+    text-decoration: none;
+    padding: 15px;
+    font-size: 19px;
+    display: block;
+    text-align: center;
+    border-radius: 10px;
+    transition: all 0.5s;
+    color: #1a1a45;
+}
+
+.navbar a:hover{
+    background-color: #80bfff47;
+    color: #1a1a45;
+    font-weight: bold;
+    transform: scale(1.1);
+}
+
+.navbar li{
+    display: inline-block;
+}
+
 #tile-pattern {
     background-image: url("assets/images/tiles.svg");
     background-size: 10%;
