--- a/cool.css
+++ b/cool.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(#db1147 70%,#fcfcfc);
+    background: linear-gradient(#01a368 70%,#03381c);
     position: relative;
     overflow: hidden;
     font-family: Fredoka,sans-serif;
@@ -51,7 +51,7 @@ body{
 
 #tile-pattern {
     background-color: #006eff27;
-    background-image: url("assets/tiles.svg");
+    background-image: url("assets/coolbg.svg");
     background-blend-mode:multiply;
     background-size: 10%;
     position: absolute;
@@ -63,6 +63,36 @@ body{
     opacity: 10%;
     animation: pan 180s linear infinite;
     will-change: background-position;
+}
+
+.videoThing {
+    position: relative;
+    padding-bottom: 56.25%;
+    border: solid;
+    border-radius: 25px;
+
+    margin-top: 12px;
+    margin-bottom: 14px;
+
+    transition: all 0.2s;
+    left: 2%;
+    width: 95%;
+}
+
+iframe.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    max-height: 100%;
+
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+}
+
+iframe.video:fullscreen {
+    border-radius: 0;
 }
 
 @keyframes pan{
