--- a/cool.css
+++ b/cool.css
@@ -66,33 +66,12 @@ body{
 }
 
 .videoThing {
-    position: relative;
-    padding-bottom: 56.25%;
-    border: solid;
-    border-radius: 25px;
-
-    margin-top: 12px;
-    margin-bottom: 14px;
-
-    transition: all 0.2s;
-    left: 2%;
-    width: 95%;
+    border-radius: 100px;
 }
 
-iframe.video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100%;
-
-    width: 100%;
-    height: 100%;
-    border-radius: 25px;
-}
-
-iframe.video:fullscreen {
-    border-radius: 0;
+.videoThing iframe{
+    border-radius: 10px;
+    max-width: 90%;
 }
 
 @keyframes pan{
@@ -123,6 +102,19 @@ iframe.video:fullscreen {
 
 p {
     padding-bottom:10px;
+}
+
+.myList{
+    margin: 20px;
+    padding: 0px;
+}
+
+.myList li{
+    position: relative;
+    top: -15px;
+    padding-bottom: 5px;
+    margin: 0px;
+    color: #000000;
 }
 
 a{
