--- a/main.css
+++ b/main.css
@@ -1,3 +1,30 @@
+@keyframes startanim{
+    0%{
+        opacity: 0;
+        transform: rotateY(-90deg);
+    }
+
+    100%{
+        opacity: 1;
+        transform: rotateY(0);
+    }
+}
+
+@keyframes bounceLogo {
+    0%{
+        transform: scale(0.0) rotateX(360deg);
+    }
+
+    75%{
+        transform: scale(1.2) rotateX(10deg);
+    }
+
+    100%{
+        transform: scale(1.0) rotateX(0deg);
+    }
+
+}
+
 body{
     background: linear-gradient(#db1147 70%,#fcfcfc);
     position: relative;
@@ -9,6 +36,7 @@ body{
 }
 
 #tile-container{
+    animation: startanim 0.3s;
     height: 100%;
     display: inline;
     width: 100%;
@@ -22,7 +50,7 @@ body{
     margin: 0px;
     align-items: center;
     text-align: center;
-    background-color: #a895ff35;
+    background-color: rgba(255, 255, 255, 0);
     border-radius: 10px;
     box-shadow: #1e178b41 0px 3px;
 }
@@ -47,6 +75,11 @@ body{
 
 .navbar li{
     display: inline-block;
+}
+
+.navbar img{
+    animation: bounceLogo 0.6s ease-out;
+    max-height: 150px;
 }
 
 #tile-pattern {
@@ -75,6 +108,7 @@ body{
 }
 
 #mainstuff{
+    animation: startanim 0.65s;
     background-color: rgb(243, 249, 255);
     width: 50vw;
     margin-left: 25%;
@@ -184,6 +218,7 @@ b{
 }
 
 a img.thumbanail {
+    transform: scale(1.0) rotate(0deg);
     max-width: 180px;
     border-radius: 25px;
     border-style: dashed; 
@@ -196,8 +231,6 @@ a img.thumbanail {
 a img.thumbanail:hover {
     transform: scale(1.1) rotate(-1deg);
     box-shadow: 2px 3px 1px 1px #bd1a48;
-    animation: thumbanim 3s infinite ease;
-    transition: all 0.5;
 }
 
 .gameName{
