--- a/socials.css
+++ b/socials.css
@@ -1,3 +1,30 @@
+@keyframes startanim{
+    0%{
+        opacity: 0;
+        transform: rotateX(-40deg);
+    }
+
+    100%{
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
+
+@keyframes bounceLogo {
+    0%{
+        transform: scale(0.0) rotateX(360deg);
+    }
+
+    75%{
+        transform: scale(1.2) rotateX(10deg);
+    }
+
+    100%{
+        transform: scale(1.0) rotateX(0deg);
+    }
+
+}
+
 body{
     background: linear-gradient(#9a28f8 70%,#000000);
     position: relative;
@@ -9,6 +36,7 @@ body{
 }
 
 #tile-container{
+    animation: startanim 0.3s;
     height: 100%;
     display: inline;
     width: 100%;
@@ -38,6 +66,7 @@ body{
 }
 
 #mainstuff{
+    animation: startanim 0.65s;
     background-color: rgb(243, 249, 255);
     width: 50vw;
     margin-left: 25%;
@@ -62,7 +91,7 @@ body{
     margin: 0px;
     align-items: center;
     text-align: center;
-    background-color: #a895ff35;
+    background-color: rgba(255, 255, 255, 0);
     border-radius: 10px;
     box-shadow: #1e178b41 0px 3px;
 }
@@ -87,6 +116,11 @@ body{
 
 .navbar li{
     display: inline-block;
+}
+
+.navbar img{
+    animation: bounceLogo 0.6s ease-out;
+    max-height: 150px;
 }
 
 p {
