--- a/names.css
+++ b/names.css
@@ -158,6 +158,22 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 25px;
+    text-shadow: #0000005d 1px 3px 10px;
+}
+
+.namecontainer p{
+    animation: appeartext 1.5s;
+    animation-delay: calc(0.5s * var(--charindex));
+}
+
+@keyframes appeartext {
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
 }
 
 em{
