--- a/names.css
+++ b/names.css
@@ -162,17 +162,21 @@ h1{
 }
 
 .namecontainer p{
-    animation: appeartext 1.5s;
+    animation: appeartext 2s ease-in-out;
+    opacity: 0;
     animation-delay: calc(0.5s * var(--charindex));
+    animation-fill-mode: forwards;
 }
 
 @keyframes appeartext {
     0%{
+        transform: translateY(10px);
         opacity: 0;
     }
 
     100%{
         opacity: 1;
+        transform: translateY(0px);
     }
 }
 
