--- a/names.css
+++ b/names.css
@@ -158,7 +158,7 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 25px;
-    text-shadow: #0000005d 1px 3px 10px;
+    text-shadow: #00000039 1px 3px 1px;
 }
 
 .namecontainer p{
@@ -166,6 +166,8 @@ h1{
     opacity: 0;
     animation-delay: calc(0.5s * var(--charindex));
     animation-fill-mode: forwards;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.13);
 }
 
 @keyframes appeartext {
