--- a/names.css
+++ b/names.css
@@ -26,7 +26,7 @@
 }
 
 body{
-    background: linear-gradient(#db1147 70%,#fcfcfc);
+    background: linear-gradient(#3d51ff 70%,#0021a3);
     position: relative;
     overflow: hidden;
     font-family: Fredoka,sans-serif;
