--- a/names.css
+++ b/names.css
@@ -158,7 +158,8 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 25px;
-    text-shadow: #00000039 1px 3px 1px;
+    text-shadow:
+    0px 3px 1px #00033e4d;
 }
 
 .namecontainer p{
