--- a/names.css
+++ b/names.css
@@ -158,8 +158,6 @@ h1{
     text-align: center;
     font-weight: bold;
     font-size: 25px;
-    text-shadow:
-    0px 3px 1px #00033e4d;
 }
 
 .namecontainer p{
@@ -167,6 +165,7 @@ h1{
     opacity: 0;
     animation-delay: calc(0.5s * var(--charindex));
     animation-fill-mode: forwards;
+    transition: all 0.3s;
 }
 
 @keyframes appeartext {
