--- a/cool.css
+++ b/cool.css
@@ -201,6 +201,12 @@ b{
     font-size: 20px;
 }
 
+.coolpagelink img{
+    width: 50%;
+    box-shadow: 3px 2px 3px#000000;
+    margin-right: 10px;
+}
+
 .waveawesome{
     font-size: 22px;
     text-shadow: 0px 2px 1px #5d5d5d;
