--- a/submit.css
+++ b/submit.css
@@ -313,6 +313,18 @@ a img.thumbanail:hover {
     transform: translateY(-30px);
 }
 
+.footnotes p{
+    margin: 5px;
+    padding-bottom: 20px;
+}
+
+.footnotes .smaller{
+    color: #1a1a4582;
+    padding: 2px;
+    margin: 0px;
+    transform: translateY(-10px);
+}
+
 @media screen and (max-width: 800px){
     #mainstuff{
         width: 80vw;
