--- a/blog/blogpages/blogs.css
+++ b/blog/blogpages/blogs.css
@@ -2,6 +2,17 @@ body{
     background-color: rgb(0, 0, 0);
     color:rgb(121, 255, 137);
     font-family: "DM Sans", sans-serif;
+    animation: appear 0.6s ease-in-out;
+}
+
+@keyframes appear {
+    0%{
+        opacity: 0.0;
+    }
+
+    100%{
+        opacity: 1.0;
+    }
 }
 
 h1{
@@ -102,4 +113,54 @@ h2{
 
 .blogdir{
     position: fixed;
+}
+
+.addition{
+    padding: 0;
+    margin: 0;
+    opacity: 0.5;
+}
+
+.maincontent p{
+    color: #ffe4de;
+    text-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    background-color: #662ff20e;
+    font-size: 20px;
+    margin: 20px;
+}
+
+.maincontent{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.maincontent img{
+    opacity: 0.5;
+    transition: all 0.25s;
+    margin: 0px;
+}
+
+.maincontent img:hover{
+    opacity: 1.0;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    border: 10px;
+    border-color: #662ff20e;
+    border-style: solid;
+}
+
+.addition a{
+    font-weight: bolder;
+    font-size: 20px;
+    transition: all 0.25s;
+    color: rgb(49, 255, 114);
+    font-style: italic;
+    opacity: 1.0;
+}
+
+.addition a:hover{
+    color: #b0ffbb;
+    opacity: 1.0;
 }
