--- a/main.css
+++ b/main.css
@@ -201,11 +201,86 @@ b{
     white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
-    text-align: center;
+    max-width: 100%;
     padding-top: 5px;
     margin: auto;
     max-width: 100%;
 }
+
+.game-slide-container{
+    max-width: 100%;
+    width: 60%;
+    position: relative;
+    margin: auto;
+    padding-top: 5px;
+}
+
+.gameslide{
+    display: none;
+}
+
+.gameslide img{
+    max-width: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    border-radius: 10px;
+    box-shadow: 0px 2px 0px 0px #00061d2a;
+    transition: all 0.2s ease;
+}
+
+.gameslide img:hover{
+    box-shadow: 0px 5px 1px 0px #00061d2a;
+    transform: scale(1.03) rotate(0.4deg);
+}
+
+.gamename{
+    padding-top: 10px;
+    font-weight: bolder;
+    z-index: 3;
+    color: #393c50;
+    font-size: 20px;
+}
+
+.gamestatus{
+    padding-bottom: 20px;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -60px;
+    padding: 16px;
+    color: rgb(31, 31, 31);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.2s ease;
+    border-radius: 3px;
+    user-select: none;
+  }
+
+  .prev:hover,.next:hover{
+    color: rgb(31, 31, 31);
+    background-color: #80b0ff4a;
+  }
+  
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.0s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 
 .gamebox{
     vertical-align: top;
