--- a/translator.css
+++ b/translator.css
@@ -171,3 +171,17 @@ button:hover{
 button:active{
     transform: scale(0.9);
 }
+
+@media screen and (max-width: 800px){
+    textarea{
+        width: 100%;
+        height: 140vw;
+    }
+    button{
+        width: 100%;
+    }
+    h1{
+        text-align: center;
+        font-size: 20px;
+    }
+}
