--- a/notfound.css
+++ b/notfound.css
@@ -1,383 +1,25 @@
-@keyframes startanim{
+body{
+    font-size: 100px;
+    background-color: black;
+    color: white;
+    animation: fadein 40s;
+}
+
+img{
+    width: 30%;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: pixelated;
+}
+
+@keyframes fadein {
     0%{
         opacity: 0;
-        transform: rotateX(-40deg);
     }
-
     100%{
         opacity: 1;
-        transform: rotateX(0);
-    }
-}
-
-@keyframes bounceLogo {
-    0%{
-        transform: scale(0.0) rotateX(360deg);
-    }
-
-    75%{
-        transform: scale(1.2) rotateX(10deg);
-    }
-
-    100%{
-        transform: scale(1.0) rotateX(0deg);
-    }
-
-}
-
-body{
-    background: linear-gradient(#0d0010 70%,#000000);
-    position: relative;
-    overflow: hidden;
-    font-family: Fredoka,sans-serif;
-    font-size: large;
-    border: #ffffff4d 10px;
-    border-style: dashed;
-}
-
-#tile-container{
-    animation: startanim 0.3s;
-    height: 100%;
-    display: inline;
-    width: 100%;
-}
-
-.navbar ul{
-    width: 100%;
-    list-style-type: none;
-    overflow: hidden;
-    padding: 0px;
-    margin: 0px;
-    align-items: center;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0);
-    border-radius: 10px;
-    box-shadow: #1e178b41 0px 3px;
-}
-
-.navbar a{
-    text-decoration: none;
-    padding: 15px;
-    font-size: 19px;
-    display: block;
-    text-align: center;
-    border-radius: 10px;
-    transition: all 0.5s;
-    color: #1a1a45;
-}
-
-.navbar a:hover{
-    background-color: #80bfff47;
-    color: #1a1a45;
-    font-weight: bold;
-    transform: scale(1.1);
-}
-
-.navbar li{
-    display: inline-block;
-}
-
-.navbar img{
-    animation: bounceLogo 0.6s ease-out;
-    max-height: 150px;
-}
-
-#tile-pattern {
-    background-color: #006eff27;
-    background-image: url("assets/coolbg.svg");
-    background-blend-mode:multiply;
-    background-size: 10%;
-    position: absolute;
-    left: 50%;
-    translate: -50% 0%;
-    z-index: -2;
-    height: 100%;
-    width: 100%;
-    opacity: 10%;
-    animation: pan 180s linear infinite;
-    will-change: background-position;
-}
-
-.videoThing {
-    border-radius: 100px;
-}
-
-.videoThing iframe{
-    border-radius: 10px;
-    max-width: 90%;
-}
-
-@keyframes pan{
-    0% {
-        background-position: 0% 0%;
-      }
-      100% {
-        background-position: 100% 0%;
-      }
-}
-
-#mainstuff{
-    animation: startanim 0.65s;
-    background-color: rgb(243, 249, 255);
-    width: 50vw;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: -6px;
-    z-index: 1;
-    outline-color: #ffffff;
-    outline-width: 10px;
-    outline-style: groove;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: -10px;
-    height: 100vh;
-    overflow-y: auto;
-}
-
-p {
-    padding-bottom:10px;
-}
-
-.myList{
-    margin: 20px;
-    padding: 0px;
-}
-
-.myList li{
-    position: relative;
-    top: -15px;
-    padding-bottom: 5px;
-    margin: 0px;
-    color: #000000;
-}
-
-a{
-    color: #5190fc;
-    text-decoration-style:wavy; 
-    font-size: 20px;
-    transform: scale(1.0);
-    transition: all 0.5s;
-}
-
-.rightAlign {
-    text-align: right;
-    margin-right: 10px;
-    margin-left: auto;
-
-}
-
-mini{
-    color: #7d7d7e;
-    font-size: 12px;
-}
-
-h1{
-    color: #000000;
-}
-
-em{
-    position: relative;
-    color: #fa2f68;
-}
-
-h2{
-    color: #3a3a3a;
-    transform: rotate(-2deg);
-    text-shadow: 2px 2px #c4c4c4;
-}
-
-b{
-    color: #393c50;
-}
-
-.anotherOne{
-    color: #3a3a3a;
-    transform: rotate(1deg) translate(0px,0px);
-    text-shadow: 2px 2px #c4c4c4;
-}
-
-.wavyText{
-    animation: waveanim 5s infinite ease;
-    font-size: 20px;
-}
-
-.coolpagelink img{
-    width: 50%;
-    box-shadow: 3px 2px 3px#000000;
-    margin-right: 10px;
-}
-
-.waveawesome{
-    font-size: 22px;
-    text-shadow: 0px 2px 1px #5d5d5d;
-    display: inline-block;
-}
-
-.waveawesome .char{
-    animation: test 2s ease-in-out infinite;
-    transform: translateY(-10em);
-    animation-delay: calc(0.05s * var(--char-index));
-}
-
-.waveawesomeSmall{
-    display: none;
-    transform: translateY(-1vw);
-    text-shadow: 0px 2px 1px #5d5d5d;
-}
-
-.gamesContainer{
-    white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    text-align: center;
-    padding-top: 5px;
-    margin: auto;
-    max-width: 100%;
-}
-
-.gamebox{
-    vertical-align: top;
-    padding: 4px;
-    margin-left: 1px;
-    margin-right: 1px;
-    height: calc(100% - 29px);
-    width: 220px;
-    display: inline-block;
-}
-
-a img.thumbanail {
-    max-width: 180px;
-    border-radius: 25px;
-    border-style: dashed; 
-    border-color: #fa2f68;
-
-    padding: 4px;
-    transition: all 0.5s;
-}
-
-a img.thumbanail:hover {
-    transform: scale(1.1) rotate(-1deg);
-    box-shadow: 2px 3px 1px 1px #bd1a48;
-    animation: thumbanim 3s infinite ease;
-    transition: all 0.5;
-}
-
-.gameName{
-    font-weight: bold;
-    transform: translateY(-10px);
-    margin-bottom: 10px;
-}
-
-.gameDesc{
-    transform: translateY(-30px);
-}
-
-@media screen and (max-width: 800px){
-    #mainstuff{
-        width: 80vw;
-        margin-left: 8.5vw;
-        margin-right: 10vw;
-        padding-left: 0px;
-        padding-right: 0px;
-        overflow-y: auto;
-    }
-
-    .waveawesomeSmall .char{
-        color: #272e689a;
-        transform: translateY(0em);
-        animation: changingcolors 3s infinite ease-in-out;
-        animation-delay: calc(0.1s * var(--char-index));
-    }
-
-    .waveawesomeSmall{
-        font-size: 20px;
-        display: inline-block;
-        transform: translateY(-1vw);
-        text-shadow: 0px 2px 1px #5d5d5d;
-    }
-
-    .waveawesome{
-        transform: translateY(-1vw);
-        text-shadow: 0px 2px 1px #5d5d5d;
-        display: none;
-    }
-
-    .wavyText{
-        animation: none;
-        font-size: 20px;
-    }
-
-    body{
-        border: #00000066 0px;
-        border-style: dashed;
-    }
-
-
-}
-
-
-@keyframes changingcolors{
-    0%,100%{
-        color: #ff5b5b;
-    }
-
-    25%{
-        color: #ffff5b;
-    }
-
-    50%{
-        color: #5190fc;
-    }
-
-    75%{
-        color: #c800ff;
-    }
-}
-
-@keyframes thumbanim {
-    0%,100%{
-        transform: scale(1.1) rotate(-1deg) translateY(3px);
-    }
-
-    50%{
-        transform: scale(1.1) rotate(1deg) translateY(-1px);
-    }
-}
-
-@keyframes test{
-    0%,100%{
-        transform: translateY(-0.2em) rotate(-5deg);
-        color: #ff5b5b;
-    }
-
-    25%{
-        color: #ffff5b;
-    }
-
-    50%{
-        transform: translateY(0.2em) rotate(5deg);
-        color: #5190fc;
-    }
-
-    75%{
-        color: #c800ff;
-    }
-}
-
-@keyframes waveanim{
-    25% {
-        transform: rotate(1.5deg);
-      }
-    
-    50%{
-        transform: rotate(0.0deg);
-    }
-    
-    75% {
-        transform: rotate(-1.5deg);
-    }
-
-    100%{
-        transform: rotate(0.0deg);
     }
 }
