--- a/FBAR/fbar.css
+++ b/FBAR/fbar.css
@@ -111,6 +111,10 @@ a{
     pointer-events: none;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
 .coolbutton{
     border: solid;
     border-radius: 2px;
