added alien dialogue and sounds

--- a/FBAR/fbar.css
+++ b/FBAR/fbar.css
@@ -165,14 +165,15 @@ button:hover{
 .alientext{
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    font-size: 30px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
     display: inline-block;
     position: absolute;
     padding: 10px;
     max-width: 400px;
     overflow: hidden;
-    transform: translate(200px,-200px);
+    text-align: left;
+    transform: translate(200px,-250px);
 }
 
 .translate-opt{
